	Added values to table gibbonSetting
	Edited files /modules/User Admin/userSettings*.php

Students: added new report to show student who should take letter home, accounting for older siblings
	New value in tables gibbonAction, gibbonPermission
	Added new file /modules/Students/report_lettersHome_byRollGroup.php

General: removed PHP notice from error page
	Edited file /error.php

v7.1.01
-------
Index: fixed issue with planner entries with no unit on homepage
	Edited file /index.php

Finance: fixed issue in which a paid invoice, re-saved, loses its payment data
	Edited file /modules/Finance/invoices_manage_editProcess.php

User Admin: fixed hidden PHP Notice issue
	Edited file /modules/User Admin/user_manage_add.php

User Admin: fixed incorrect date format in user import instructions
	Edited file /modules/User Admin/import_users.php

Planner: fixed PHP Notices when linking through to Behaviour
	Edited files /modules/Planner/planner_view_full.php, planner_view_full_starAjax.php

General: added module name to document title once module include takes place (makes for easier navigation using back button history)
	Edited file /index.php

Application Form: fixed PayPal integration so that payments actually go through (oops)
	Edited table gibbonApplicationForm
	Edited files /lib/paypal/*
	Edited files /modules/Application Form/applicationForm*.php
	Edited file /modules/User Admin/applicationForm_manage_edit.php, applicationForm_manage.php

v7.1.00
-------
User Admin: fixed URL issue in email to newly accepted parents and students
	Edited file /modules/User Admin/applicationForm_manage_accept.php

User Admin: fixed bug in creating student notes on application form accept
	Edited file /modules/User Admin/applicationForm_manage_accept.php

General: replaced config.php with config-sample.php to make distribution easier
	New file /config-sample.php
	Set GitHub to ignore config.php

Planner: fixed visual elements of table in block copy back